# cuda_colorize

./: CMakeLists.txt
include/: colorize_pointcloud.h
src/: colorize_pointcloud.cu
